k3s/applications/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prowlarr
  namespace: media
  labels:
    app.kubernetes.io/name: prowlarr
spec:
  type: ClusterIP
  selector:
    app: prowlarr
  ports:
    - name: http
      port: 9696
      targetPort: 9696
      protocol: TCP
    - name: metrics
      port: 9710
      targetPort: 9710
      protocol: TCP
